all - fix header/footer not showing correctly

--- a/src/sass/includes/buttons.sass
+++ b/src/sass/includes/buttons.sass
@@ -1,7 +1,7 @@
 button
   display: block
   background-color: $accent-color
-  color: $primary-color-text
+  color: $accent-color-text
   padding: 1.5em
   width: 200px
   border-radius: 3px
