--- a/src/sass/includes/forms.sass
+++ b/src/sass/includes/forms.sass
@@ -26,7 +26,7 @@
     color: $primary-text-color
     
   label
-    color: #9e9e9e
+    color: #fff
     position: absolute
     top: 0.8rem
     left: 0
