--- a/src/sass/includes/variables.sass
+++ b/src/sass/includes/variables.sass
@@ -4,7 +4,8 @@ $primary-color-light:  #BFD7E0
 $primary-color-text:   #FFFFFF
 // $accent-color:         #448AFF
 // $accent-color:         #26a69a
-$accent-color:         #D45401
+$accent-color:         #FEE65E
+$accent-color-text:    #000000
 $primary-text-color:   #ffffff
 $secondary-text-color: #757575
 $divider-color:        #BDBDBD
